[package]
name = "ras-jsonrpc-macro"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Procedural macro for type-safe JSON-RPC interfaces with auth integration and OpenRPC document generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["server", "reqwest"]
server = ["axum", "ras-jsonrpc-core"]
client = ["dep:ras-transport-core"]
reqwest = ["client", "ras-transport-core/reqwest"]
permissions = []

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
bon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Server dependencies
axum = { workspace = true, optional = true }
ras-jsonrpc-core = { path = "../ras-jsonrpc-core", version = "0.1.2", optional = true }

# Client dependencies (only referenced by generated client code, gated by the
# `client` feature — see `ras-rest-macro`/`ras-file-macro` for the same wiring).
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0", optional = true }

# Always needed for types
ras-jsonrpc-types = { path = "../ras-jsonrpc-types", version = "0.1.1" }

[dev-dependencies]
tokio = { workspace = true }
ras-transport-core = { path = "../../core/ras-transport-core", version = "0.1.0", features = ["axum-test"] }
tower = { workspace = true }
rand = { workspace = true }
ras-identity-session = { path = "../../identity/ras-identity-session", version = "0.2.0" }
futures = { workspace = true }
# Server dependencies for tests
axum = { workspace = true }
ras-jsonrpc-core = { path = "../ras-jsonrpc-core", version = "0.1.2" }
ras-auth-core = { path = "../../core/ras-auth-core", version = "0.1.0" }
ras-permission-manifest = { path = "../../specs/ras-permission-manifest", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum-test = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "dispatch"
harness = false
