[package]
name = "ras-jsonrpc-types"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "JSON-RPC 2.0 protocol types and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-agent-stack"
homepage = "https://github.com/JedimEmO/rust-agent-stack"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
