[package]
name = "ras-permission-manifest"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Typed permission manifest data structures for Rust Agent Stack service definitions"
keywords = ["api", "auth", "permissions", "manifest"]
categories = ["api-bindings", "data-structures", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
