[package]
name = "ras-topology-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Deployment-agnostic RAS service topology model: validated service graphs, gateway profiles, authorization policy artifacts, and diagrams"
keywords = ["api", "topology", "authorization", "gateway", "codegen"]
categories = ["development-tools", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JedimEmO/rust-api-stack"
homepage = "https://github.com/JedimEmO/rust-api-stack"
readme = "README.md"

[dependencies]
ras-permission-manifest = { path = "../../specs/ras-permission-manifest", version = "0.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
ras-authorization-core = { path = "../../authorization/ras-authorization-core", version = "0.1.0" }
ras-authorization-gateway = { path = "../../authorization/ras-authorization-gateway", version = "0.1.0" }
ras-topology-macro = { path = "../ras-topology-macro", version = "0.1.0" }
